fixed font-size(rem) being too small on less than 400px screens, added a loading when fetching the results of other people, did some polishing...

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-body {
-  /* background-image: url(./assets/cubes.png); */
-}
-
 /* for dark & light */
 @layer base {
   .light {
@@ -28,7 +24,7 @@ body {
 
 /* for responsiveness  */
 html {
-  font-size: 95%;
+  font-size: 105%;
 }
 
 @media (min-width: 400px) {
